@@ -54,7 +54,7 @@ typedef gchar* (*TnyGetPassFunc) (TnyAccount *self, const gchar *prompt, gboolea
 typedef void (*TnyForgetPassFunc) (TnyAccount *self);
 typedef void (*TnyRefreshFolderCallback) (TnyFolder *self, gboolean cancelled, GError **err, gpointer user_data);
 typedef void (*TnyGetMsgCallback) (TnyFolder *folder, gboolean cancelled, TnyMsg *msg, GError **err, gpointer user_data);
-typedef void (*TnyTransferMsgsCallback) (TnyFolder *folder, GError **err, gpointer user_data);
+typedef void (*TnyTransferMsgsCallback) (TnyFolder *folder, gboolean cancelled, GError **err, gpointer user_data);
 typedef void (*TnyStatusCallback) (GObject *self, TnyStatus *status, gpointer user_data);
 typedef enum _TnyHeaderFlags TnyHeaderFlags;
 typedef enum _TnyHeaderPriorityFlags TnyHeaderPriorityFlags;
