@@ -43,6 +43,7 @@ enum _TnyStatusCode
 	TNY_FOLDER_STATUS_CODE_REFRESH = 1,
 	TNY_FOLDER_STATUS_CODE_GET_MSG = 2,
 	TNY_GET_MSG_QUEUE_STATUS_GET_MSG = 3,
+	TNY_FOLDER_STATUS_CODE_XFER_MSGS = 4,
 };
 
 struct _TnyStatus 
